第二章：物理层

--- a/ComputerNetwork/计算机网络.md
+++ b/ComputerNetwork/计算机网络.md
@@ -47,3 +47,36 @@
     * **网络层**：网络层负责为分组交换网上的不同主机提供通信服务。在发送数据时，网络层把运输层产生的报文段或用户数据报封装成**分组或包或IP数据报**进行传送。网络层协议是无连接的**网际协议IP** 和 **许多种路由选择协议** 。 
     * **数据链路层**：在两个相邻结点之间传送数据时，数据链路层将网络层交下来的 IP 数据报**组装成帧** ，在两个相邻结点之间的链路上传送**帧**。每一帧包括数据和必要的控制信息（如同步信息、地址信息、差错控制等）。
     * **物理层**：在物理层上所传数据的单位是**比特**。物理层要考虑用多大的电压代表“1” 或 “0” ，以及接收方如何识别出发送方所发送的比特。 
+
+## 第二章：物理层
+* **物理层的任务**：
+    * 物理层考虑的是怎样才能在连接各种计算机的传输媒体上传输数据比特流，而不是指具体的传输媒体。
+    * 物理层的主要任务就是确定与传输媒体的接口有关的一些特性，如机械特性、电气特性、功能特性和过程特性。
+* 一个数据通信系统可划分为三个大部分，即**源系统**（源点、发送器）、**传输系统**（传输网络）、**目的系统**（接收器、终点）
+* 通信的三种基本方式：单工、半双工、双工  P43
+    * **单向通信**：又称为单工通信 ， 即只能有一个方向的通信而没有反方向的交互。无线电广播或有线电广播以及电视广播就属于这种类型
+    * **双向交替通信**：又称为半双工通信，即通信的双方都可以发送消息，但不能双方同时发送。这种通信方式是一方发送另一方接受，过一段时间后可以再反过来。
+    * **双向同时通信**：又称为全双工通信，即通信的双方可以同时发送和接收信息。
+* 来自信源的信号常称为**基带信号**，基带信号往往包含有较多的低频成分，甚至有直流成分，而许多信道并不能传输这种低频分量或直流分量，为了解决这一问题，就必须对基带信号进行**调制** 。 
+    * **基带调制**：把数字信号转换成另一种形式的数字信号
+    * **带通调制**：把数字信号转换成模拟信号
+* **传输媒体**：导引型（双绞线、同轴电缆、光纤）和非导引型（无线电波）
+    * **在导引型传输媒体中**，电磁波被导体沿着固体媒体（铜线或光钎）传播。
+        * 双绞线
+        * 同轴电缆
+        * 光钎：通常由非常透明的石英玻璃拉成细丝，主要由纤芯和包层构成双层通信圆柱体。
+    * **在非导引型传输媒体**就是指自由空间，在非导引型传输媒体中电磁波的传输常称为无线传输。
+        * 地面微波接力
+        * 卫星通信
+* 信道复用技术：频分复用、时分复用、统计时分复用、波分复用和码分复用
+    * **频分复用**：用户在分配到一定的频带后，在通信过程中自始至终都占用这个频带，可见频分复用的所有用户**在同样的时间占用不同的带宽资源**。
+    * **时分复用**：所有用户是在不同的时间占用同样的频带宽度。
+    * **统计时分复用**：一个使用统计时分复用的集中器连接 4 个低速用户，然后将它们的数据集中起来通过高速线路发送到一个远地计算机。统计复用又称为**异步时分复用**，而普通的时分复用称为同步时分复用。使用统计时分复用的集中器也叫做**智能复用器。**
+    * **波分复用**：就是**光的频分复用**。
+    * **码分复用**：每个用户可以在同样的时间使用同样的频带进行通信。**由于各用户使用经过特殊挑选的不同码型，因此各用户之间不会造成干扰**。使用 CDMA 的每一个站被指派一个唯一的 m bit 码片序列 。 一个站如果要发送比特 1 ，则发送它自己的 m bit 码片序列，如果要发送比特 0 ，则发送该码片序列的二进制反码。
+* 宽带接入技术：ADSL（基于模拟电话用户线的改造）（非对称的含义）、HFC网（基于有线电视网开发）、FTTx（光纤）技术
+    * **非对称数字用户线 ADSL** ：用数字技术对现实的模拟电话用户线进行改造，使它能够承载宽带数字业务。
+    * **光纤同轴混合网 HFC** ：是在目前覆盖面很广的有线电视网的基础上开发的一种居民宽带接入网，除可传送电视节目外，还能提供电话、数据和其他宽带交互型业务。
+    * **FTTx 光纤技术** :多种宽带光钎接入方式，FTTx 表示把光电转换的地方，从用户家中向外延伸到离用户家门口有一定距离的地方。
+
+
