--- a/ComputerNetwork/计算机网络.md
+++ b/ComputerNetwork/计算机网络.md
@@ -80,3 +80,51 @@
     * **FTTx 光纤技术** :多种宽带光钎接入方式，FTTx 表示把光电转换的地方，从用户家中向外延伸到离用户家门口有一定距离的地方。
 
 
+
+## 第三章：数据链路层
+* **链路**：就是从一个结点到相邻结点的一段物理线路，而中间没有任何其他的交换结点。
+* **数据链路**：当需要在一条线路上传送数据时，除了必须有一条物理线路外，还必须有一些必要的通信协议来控制这些数据的传输，若把实现这些协议的硬件和软件加在链路上，就构成了数据链路。
+* 数据链路层的三个基本问题
+    * **封装成帧**：就是在一段数据的前后分别添加首部和尾部，这样就构成了一个帧。
+    * **透明传输**：表示无论什么样的比特组合的数据，都能够按照原样没有差错地通过这个数据链路层。     帧使用首部和尾部进行定界，如果帧的数据部分含有和首部尾部相同的内容，那么帧的开始和结束位置就会被错误的判定。需要在数据部分出现首部尾部相同的内容前面插入转义字符。如果数据部分出现转义字符，那么就在转义字符前面再加个转义字符。在接收端进行处理之后可以还原出原始数据。这个过程透明传输的内容是转义字符，用户察觉不到转义字符的存在。
+    * **差错检测**：目前数据链路层广泛使用了循环冗余检验（CRC）来检查比特差错 ，模二运算。
+* CRC差错检测技术原理 P75
+* PPP协议的特点。P108
+    * 简单
+    * 只检差错，而不是纠正错误
+    * 不使用序号，也不进行流量控制
+    * 可同时支持多种网络层协议
+    * 字节填充
+        把信息字段中出现的每一个 0x7E 字节转变成为 2 字节序列（0x7D、0x5E）
+        把信息字段中出现的每一个 0x7D 字节转变成为 2 字节序列（0x7D、0x5D）
+        若信息字段中出现 ASCII 码的控制字符（即数值小于 0x20 的字符) ， 则在字符前面要加入一个 0x7D 字节，同时将该字符的编码加以改变。例如，出现 0x03 就要把它转变为 2 字节序列（0x7D , 0x23）。
+    * 零比特填充
+        只要发现有 5 个 1 ，则立即填入一个  0 ，因此经过这种零比特填充后的数据，就可以保证在信息字段中不会出现 6 个连续 1  。
+    这样就保证了透明传输：在所传送的数据比特流中可以传送任意组合的比特流，而不会引起对帧边界的错误判断。
+* 局域网的特点与优点 P82
+    * 特点：网络为一个单位所拥有，且地理范围和站点数目均有限。
+    * 优点：
+        * 具有广播功能，从一个站点可很方便地访问全网。局域网上的主机可共享连接在局域网上的各种硬件和软件资源 。 
+        * 便于系统的扩展和逐渐演变，各设备的位置可灵活调整和改变。
+        * 提高了系统的可靠性、可用性和生存性 。
+
+* 共享通信媒体资源的两种方法P83
+    * 静态划分信道：频分复用、时分复用、波分复用和码分复用等
+    * 动态媒体接入控制：它又称为多点接入，其特点是信道并非在用户通信时固定分配给用户。
+        * 随机接入：所有的用户可随机地发送消息，如果恰巧有两个或更多的用户在同一时刻发送消息，那么在共享媒体上就要产生碰撞。因此必须有解决碰撞的网络协议。
+        * 受控接入：在局域网中使用的较少。
+* **适配器** : 计算机与外界局域网的连接就是通过适配器进行的
+* 计算机的硬件地址就在适配器的 ROM 中， 而计算机的软件地址----IP 地址 ， 则在计算机的存储器中。
+* **CSMA/CD协议及其要点**P109
+    * 多点接入：说明这是总线型网络，许多计算机以多点接入的方式连接在一根总线上。
+    * 载波监听：不管在发送前，还是在发送中，每个站都必须不停地检测信道。在发送前，如果监听到信道正在使用，就必须等待。
+    * 碰撞检测：在发送中，如果监听到信道已有其它主机正在发送数据，就表示发生了碰撞。虽然每个主机在发送数据之前都已经监听到信道为空闲，但是由于电磁波的传播时延的存在，还是有可能会发生碰撞。
+    * 电磁波在 1 km 电缆的传播时延约为 5 us 
+    * 在使用 CSMA/CD 协议时，一个站不可能同时进行发送和接受（但必须边发送边监听信道），因此使用 CSMA/CD 协议的以太网不可能进行全双工通信而只能进行双向交替提醒（半双工通信）
+    * 以太网的争用期确定为 51.2 us 
+    * 以太网规定了一个最短帧长 64 字节，即 512 bit ， 如果要发送的数据非常少，那么必须加入一些填充字节，是帧长不少于 64 字节，对于 10 Mbit/s 以太网，发送 512 bit 的时间需要 51.2 us ，也就是争用期。
+    * 凡是长度小于 64 字节的帧都是由于冲突而异常中止的无效帧。
+    * 强化碰撞：就是当发送数据的站一旦发现发生了碰撞时，除了立即停止发送数据外，还要再继续发送 32 比特或 48 比特的人为干扰信号，以便让所有用户都知道现在已经发生了碰撞。
+    * 以太网还规定了帧间最小间隔为 9.6 us , 相当于 96 比特时间，为了使刚刚到数据帧的站的接受缓存来得及清理，做好接收下一帧的准备。
+* **VLAN**：使用以太网交换机实现虚拟局域网、VLAN定义、VLAN是一种服务，不是一种新型网络 （P101）
+* 虚拟局域网 VLAN 是由一些局域网网段构成的与物理位置无关的逻辑组，而这些网段具有某些共同的需求。每一个 VLAN 的帧都有一个明确的标识符，指明发送这个帧的计算机属于哪一个 VLAN 。
