第四章：网络层

--- a/ComputerNetwork/计算机网络.md
+++ b/ComputerNetwork/计算机网络.md
@@ -128,3 +128,114 @@
     * 以太网还规定了帧间最小间隔为 9.6 us , 相当于 96 比特时间，为了使刚刚到数据帧的站的接受缓存来得及清理，做好接收下一帧的准备。
 * **VLAN**：使用以太网交换机实现虚拟局域网、VLAN定义、VLAN是一种服务，不是一种新型网络 （P101）
 * 虚拟局域网 VLAN 是由一些局域网网段构成的与物理位置无关的逻辑组，而这些网段具有某些共同的需求。每一个 VLAN 的帧都有一个明确的标识符，指明发送这个帧的计算机属于哪一个 VLAN 。
+
+
+## 第四章：网络层
+* 网络层提供的两种服务
+    * 网络层向上只提供简单的、灵活的、无连接的、尽最大努力交付的数据报服务。
+    * 网络层不提供服务质量的承诺
+* 分类的 IP 地址
+    * A 类（固定 0 ）：
+        * 网络号字段为全 0 的 IP 地址是个保留地址，意思是“本网络”
+        * 网络号为 127 （即01111111）保留作为本地软件环回测试本主机的进程之间的通信。
+        * 目的地址为环回地址的 IP 数据报永远不会出现在任何网络上，因为网络号为 127 的地址根本不是一个网络地址。
+        * 主机号全 0 的主机号字段表示该 IP 地址是 “本主机”所连接到的单个网络地址，而全 1 表示“所有的",因而全 1 的主机号字段表示该网络上的所有主机 。
+    * B 类（固定 10）：
+        * 不存在网络号总数减 2 的问题，但实际上 B 类网络地址 128.0.0.0 是不指派的，而可以指派的 B 类最小网络地址是 128.1.0.0
+        * 主机号还是要减去全 0 和 全 1 的主机号
+    * C 类（固定 110）
+        * C 类网络地址 192.0.0.0 也是不指派的，可以指派的 C 类最小网络地址是 192.0.1.0
+        * 主机号还是要减去全 0 和 全 1 的主机号
+    * D 类（固定 1110 ）多播地址
+    * E 类（固定 1111 ）保留为今后使用
+* 用转发器或网桥连接起来的若干个局域网仍为一个网络
+* 路由器总是具有两个或两个以上的 IP 地址 ，即路由器的每一个接口都有一个不同网络号的 IP 地址 。 路由器同时连接到两个局域网上，因此它有两个硬件地址。
+* ARP协议概念及特点（ IP 数据报 找 MAC 地址）
+* ARP 协议的用户是为了从网络层使用的 IP 地址，解析出在数据链路层使用的硬件地址。
+* ARP 高速缓存 ， 里面有本局域网上的各主机和路由器的 IP 地址到硬件地址的映射表。
+* 映射表里面没有 MAC 就广播， ARP 请求分组是广播发送的，但 ARP 响应分组是普通的单播，即从一个源地址发送到一个目的地址。
+* ARP 是解决同一个局域网上的主机或路由器的 IP 地址和硬件地址的映射问题。
+* 为什么我们要使用抽象 IP 地址：
+    * 答： 由于全世界存在着各式各样的网络，它们使用不同的硬件地址。要使这些异构网络能够互相通信就必须进行非常复杂的硬件地址转换工作，因此由用户或用户主机来完成这项工作几乎是不可能的事，但 IP 编制把这个复杂问题解决了，连接到互联网的主机只需各自用户一个唯一的 IP 地址 ，它们之间的通信就像连接在同一个网络上那样简单方便。
+* 在 IP 层下面的每一种数据链路层协议都规定了一个数据帧中的数据字段的最大长度，这称为最大传送单元 MTU 。当一个 IP 数据报封装成链路层的帧时 ， 此数据报的总长度一定不能超过下面的数据链路层所规定的 MTU 。例如：常用的以太网就规定其 MTU 值是 1500 字节，若所传送的数据报长度超过数据链路层的 MTU 值，就必须把过长的数据报进行分片处理。
+* IP 协议规定，在互联网中所有的主机和路由器，必须能够接受长度不超过 576 字节的数据报。这是假定上层交下来的数据长度有 512 字节，加上最长的 IP 首部 60 字节，再加上 4 字节的富余量，就得到 576 字节。当主机需要发送长度超过 576 字节的数据报时，应当先了解一下，目的主机能否接受所要发送的数据报长度，否则，就要进行分片。
+* IP 数据报中首部中的
+    * 标志字段：
+        * 最低位记为： MF ，MF = 1 即表示后面”还有分片“的数据报
+        * 中间记为 ： DF ，意思是”不能分片”，只有当 DF = 0 时，才允许分片 。 
+    * 片偏移：
+        * 片偏移以 8 个字节为偏移单位，也就是说，除最后一个数据报片外，每个分片的长度一定是 8 字节（64）的整数倍。
+
+* 划分子网：
+    * IP 地址 ::= { <网络号> , <子网号> , <主机号>}
+* 构造超网（消除传统的 A 类 、 B 类 、C 类）
+    * IP 地址 ::= { <网络前缀>,<主机号> } 
+* 最长前缀匹配（二叉搜索查找路由表）
+* ICMP协议特点
+    * ICMP 允许主机或路由器报告差错情况和提供有关异常情况的报告。
+    * ICMP 报文是装在 IP 数据报中，作为其中的数据部分。
+    * ICMP 报文的种类有两种：
+    * ICMP 差错报告报文
+        * 3 ： 终点不可达
+        * 11 ： 时间超过
+        * 12 ：参数问题
+        * 5   ：改变路由（Redirect） 
+    * ICMP 询问报文
+        * 8  或 0 ：回送请求 或 回答
+        * 13 或 14：时间戳请求 或 回答
+    * 网络路由选择协议
+        * 内部网关协议 IGP ： 具体的协议有：RIP 、 OSPF 等
+        * 外部网关协议 EGP ： 目前使用的协议就是 BGP 。
+* RIP协议（重点）：是一种分布式的基于距离向量的路由选择协议，其最大的优点就是简单。
+    * 距离：从一路由器到直接连接的网络的距离定义为 1 ， 从一路由器到非直接连接的网络的距离定义为所经过的路由器加 1 。 RIP 允许一条路径最多只能包含 15 个路由器。
+    * 一个 RIP 报文最多包括 25 个路由，因而 RIP 报文的最大长度是 4 + 20*25 = 404 字节，如超过，必须再用一个 RIP 报文来传送。
+    * 特点
+        * 仅和相邻路由器交换信息 。 
+        * 路由器交换的信息是当前本路由器所知道的全部信息，即自己现在的路由表 。 
+        * 按固定的时间间隔交换路由信息 。
+    * 缺点：
+        * 当网络出现故障时，要经过比较长的时间才能将此消息传送到所有的路由器
+        * RIP 限制了网络的规模 ，它能使用的最大距离为 15 
+        * 路由器之间交换的路由器中的完整路由表，因而随着网络规模的扩大，开销也就增加。
+        * 好消息传播的快，而坏消息传播得慢
+    * 优点：实现简单，开销较小。
+* OSPF协议基本特点
+    * OSPF 最主要的特征就是使用分布式的链路状态协议，而不是像 RIP 那样的距离向量协议。
+    * 和 RIP 协议相比 ， OSPF 的三个要点和 RIP 的都不一样
+    * OSPF 协议向本自治系统中所有路由器发送消息 ， 这里使用的方法是洪泛法，这就是路由器通过所有输出端口向所有相邻的路由器发送消息，而每一个相邻路由器又再将此信息发往其所有的相邻路由器（但不再发送给刚刚发来信息的那个路由器）。RIP 协议是仅仅向自己相邻的两个路由器发送消息。
+    * 发送的消息就是与本路由器相邻的所有路由器的链路状态，但这只是路由器所知道的部分信息。所谓的“链路状态”就是说明本路由器都和那些路由器相邻，以及该链路的“度量”，OSPF 将这个“度量”用来表示费用、距离、时延、带宽，等等。 对于 RIP 协议，发送的信息是：“到所有网络的距离和下一跳路由器” 。 
+    * 只有当链路状态发生变化时 , 路由器才向所有路由器用洪泛法发送此消息。而不像 RIP 那样 ， 不管网络拓扑有无发送变化，路由器之间都要定期交换路由表的信息。
+    * 由于个路由器之间频繁地交换链路状态信息，因此所有的路由器最终都能建立一个链路状态数据库，这个数据库实际上就是全网的拓扑结构图。
+* OSPF 还具有下列的一些特点：
+    * OSPF 允许管理员给每条路由指派不同的代价。OPSF 对于不同类型的业务可计算出不同的路由
+    * 如果到同一目的网络有多条相同代价的路径，那么可以将通信量分配给这几条路径。
+    * 所有在 OSPF 路由器之间交换的分组（例如：链路状态更新分组）都具有鉴别的功能，因而保证了仅在可信赖的路由之间交换链路状态信息。
+    * OSPF 支持可变长度的子网划分和无分类的编址 CIDR 
+    * 由于网络中的链路状态可能经常发生变化，因此 OSPF 让每一个链路状态都带上 32 位的序号，序号越大状态就越新 。 OSPF 规定，链路状态序号增长的速率不得超过每 5 秒钟  1 次 。 这样，全部序号空间在 600 年内不会产生重复号
+* OSPF 的五种分组类型 ， OSPF 规定，每两个相邻路由器每隔 10 秒钟要交换一次问候分组， 这样就能确知那些邻站是可达的。其他的四种分组都是用来进行链路状态数据库的同步。
+    * 类型 1 ： 问候分组 ， 用来发现和维持邻站的可达性
+    * 类型 2 ： 数据库描述分组 ， 向邻站给出自己的链路状态数据库中的所有链路状态项目的摘要信息。
+    * 类型 3 ： 链路状态请求分组 ， 向对方请求发送某些链路状态项目的详细信息。
+    * 类型 4 ： 链路状态更新分组 ， 用洪泛法对全网更新链路状态。
+    * 类型 5 ： 链路状态确认分组 ， 对链路更新分组的确认 。 
+* BGP 四种报文
+    * OPEN （打开）报文 ， 用来与相邻的另一个 BGP 发言人建立关系， 使通信初始化
+    * UPDATE （更新）报文 ， 用来通知某一路由的信息，以及列出要撤销的多条路由
+    * KEEPALIVE （保活）报文 ， 用来周期性地证实邻站的连通性。
+    * NOTIFICATION （通知）报文 ， 用来发送检测到的差错 。 
+* IPv6基本概念，过渡技术P176
+    * 过渡技术
+    * 双协议栈
+    * 隧道技术
+
+* IP多播基本概念和特点
+    * IGMP 协议是让连接在本局域网上的多播路由器知道本局域网上是否有主机参加或退出了某个多播组。
+    * 多播转发必须动态地适应多播组成员的变化（这时网络拓扑并未发生变化）
+    * 多播路由器在转发多播数据报时，不能仅仅根据多播数据报中的目的地址，而是还要考虑这个多播数据报从什么地方来和要到什么地方去。
+    * 多播数据报可以由没有加入多播组的主机发出，也可以通过没有组成员接入的网络。
+* 多播路由选择协议：
+    * 洪泛和剪除
+    * 隧道技术
+    * 基于核心的发现技术
+* VPN和NAT基本概念 
+    * NAT ： 网络地址转换 ， 这种方法需要在专用网连接到互联网的路由器上安装 NAT 软件 ， 装有 NAT 软件的路由器叫做 NAT 路由器 ，它至少有一个有效的外部全球 IP 地址 ， 这样所有使用本地地址的主机在和外界通信时，都要在 NAT 路由器上将其本地地址转换成全球 IP 地址 ， 才能和互联网连接 。 
