--- a/ComputerNetwork/计算机网络.md
+++ b/ComputerNetwork/计算机网络.md
@@ -239,3 +239,40 @@
     * 基于核心的发现技术
 * VPN和NAT基本概念 
     * NAT ： 网络地址转换 ， 这种方法需要在专用网连接到互联网的路由器上安装 NAT 软件 ， 装有 NAT 软件的路由器叫做 NAT 路由器 ，它至少有一个有效的外部全球 IP 地址 ， 这样所有使用本地地址的主机在和外界通信时，都要在 NAT 路由器上将其本地地址转换成全球 IP 地址 ， 才能和互联网连接 。 
+
+## 第五章：运输层
+* **UDP 概述**
+    * UDP 是无连接的 ， 即发送数据之前不需要建立连接 ，因此减少了开销和发送数据之前的时延 。 
+    * UDP 使用尽最大努力交付 ， 既不保证可靠交付， 因此主机不需要维护复杂的连接状态表。
+    * UDP 是面向报文的 ， 发送方的 UDP 对应用程序交下来的报文 ， 在添加首部后就向下交付 IP 层 。 
+    * UDP 没有拥塞控制 ， 因此网络出现的拥塞不会使源主机的发送速率降低 ，这对某些实时应用是很重要的。但当很多的源主机同时都向网络发送高速率的实时视频流时，网络就有可能发生拥塞，结果大家都无法正常接受 。
+    * UDP 支持一对一、一对多、多对一和多对对的交互通信。
+    * UDP 的首部开销小，只有 8 个字节， 比 TCP 的 20 个字节的首部要短 。 
+* **TCP 的主要特点**
+    * TCP 是面向连接的运输层协议 。
+    * 每一条 TCP 连接只能有两个端点 ， 每一条 TCP 连接只能是 点对点 的 。 
+    * TCP 提供可靠交付的服务 ， 通过 TCP 连接传送的数据，无差错、不丢失、不重复，并且按序到达 。 
+    * TCP 提供全双工通信 ，TCP 允许通信双方的应用进程在任何时候都能发送数据。  
+    * 面向字节流 ， TCP 中 “流” 指的是流入到进程或从进程流出的字节序列 。
+* TCP 的流量控制
+    * 发送方的发送窗口不能超过接收方给出的接受窗口的数值。
+    * 接受方 A 向发送方 B 发送了零窗口的报文段不久之后，B 的接收缓存又有了一些存储空间，于是 B 向 A 发送了 rwnd = 400 的报文段，然而这个报文段在传送过程中丢失了，A 一直等待收到 B 发送的非零窗口通知 ， 而 B 也一直等待 A 发送的数据，如果没有其他的措施，这种互相等待的死锁局面将一直延续下去 。
+        * 答：为了解决这个问题， TCP 为每一个连接设有一个持续计时器 ， 只要 TCP 连接的一方收到对方的零窗口通知，就启动持续计时器，若持续计时器设置的时间到期，就发送一个零窗口探测报文段（仅携带 1 字节的数据）。
+* TCP 拥塞控制：
+    * 方法：慢开始、拥塞避免、快重传、快恢复
+    * 发送方让自己的发送窗口等于拥塞窗口
+    * 判断网络拥塞的依据就是出现了超时
+    * 慢算法：
+        * 当主机开始发送数据时，由于并不清楚网络的负荷情况，所以如果立即把大量数据字节注入到网络，那么就有可能引起网络发送拥塞。经验证明，较好的方法是先探测一下，即有小到大逐渐增大发送窗口，也就是说，由小到达逐渐增大拥塞窗口数值。
+* 拥塞算法：
+    * 是让拥塞窗口 cwnd 缓慢地增大， 即没经过一个往返时间 RTT 就把发送方的拥塞窗口 cwnd 加1 ， 而不是像慢开始阶段那样加倍增长 。 
+* 快重传：
+    * 防止因发送方迟迟收不到确认，就会产生超时，就会误认为网络发生了拥塞，错误的启动慢开始，把拥塞窗口 cwnd 又设置为 1 ，因而降低了传输效率 。
+* 快重传算法
+    * 首先要求接收方不要等待自己发送数据时才进行捎带确认，而是要立即发送确认，即使收到了失序的报文段也要立即发出对已收到的报文段的重复确定。快重传算法规定，发送方只要一连收到 3 个重复确认，就知道接收方确实没有收到报文段，因而应当立即进行重传，这样就不会出现超时，发送方也就不会误认为出现了网络拥塞，使用快重传可以使整个网络的吞吐量提高约 20% 。 
+* 快恢复：
+    * 发送方知道现在只是丢失了个别的报文段，于是不启动慢开始，而是执行快恢复算法，发送方调整门限值，并开始执行拥塞避免算法。也有的快恢复是把开始时的拥塞算法  cwnd 值再增大一些 ， 这样做的理由是：既然发送方收到 3 个重复的确认，就表明有 3 个分组已经离开了网络，这 3 个分组不再消耗网络的资源而是停留在接收方的缓存中，可见现在网络中并不是堆积了分组而是减少了 3 个分组，因此可以适当把拥塞窗口扩大些 。 
+TCP的连接建立
+三报文握手
+TCP 连接释放
+四报文握手
