--- a/ComputerNetwork/计算机网络.md
+++ b/ComputerNetwork/计算机网络.md
@@ -276,3 +276,58 @@ TCP的连接建立
 三报文握手
 TCP 连接释放
 四报文握手
+
+## 第六章：应用层
+* 概念掌握：P319-321 本章重点概念，了解各应用层协议所使用的传输层服务（TCP/UDP）
+* 理解与应用：Telnet 协议、FTP协议的基本特点，DNS协议、HTTP协议的基本原理，socket通信中常用的系统调用（P310-311、图6-31）
+* DNS 协议
+    * 域名中的标号都是英文字母和数字组成，每一个标号不超过 63 个字符 ， 也不区分大小写字母。标号中除连字符(-)外不能使用其他的标点符号。由多个标号组成的完整域名总共不超过 255 个字符。
+    * 域名解析
+    * 递归查询
+    * 迭代查询
+    * 高速缓存：用来存放最近查询过的域名以及从何处获得域名映射信息的记录。
+* 文件传送协议 FTP ：
+    * FTP 的主要功能是减少或消除在不同的操作系统下处理文件的不兼容性 。 
+    * FTP 使用客户服务器方式    
+    * 一个 FTP 服务器进程可同时为多个客户进程提供服务 。
+    * FTP 的服务器进程由两个部分组成：一个主进程，负责接受新的请求 ； 另外有若干个从属进程，负责处理单个请求。
+* TELNET 终端仿真协议
+    * 和 FTP 的情况相似， 服务器中的主进程等待新的请求，并产生从属进程来处理每一个连接。
+    * TELNET 定义了数据和命令应怎样通过互联网，这些定义就是所谓的网络虚拟终端 NVT ，客户软件把用户的击键和命令转换成 NVT 格式 ，并送交服务器，服务器软件把收到的数据和命令从 NVT 格式转换成远地系统所需的格式 ， 向用户返回数据时，服务器把远地系统的格式转换为 NVT 格式 ， 本地客户再从 NVT 格式转换到本地系统所需的格式 。
+ 
+附：常用缩略词解释
+ATM： Asynchronous Transfer Mode异步传输模式
+CDMA： Code Division Multiple Access码分多路访问  
+VPN：Virtual Private Networks虚拟私有网络
+MAC：Medium Access Control介质访问控制   
+WWW ：World Wide Web万维网     
+GPS: global positioning protocol 全球定位系统 
+DNS： Domain Name System域名系统   
+ISP： Internet Service Provider 互联网服务提供者
+LAN： Local Area Network局域网  
+VLAN ：Virtual Local Area Network虚拟局域网 
+MAN：metropolitan area network 城域网   
+WAN：wild area network 广域网 
+WLAN: wireless local area network 无线局域网   
+FDM： Frequency Division Multiplexing，频分多路复用 
+TDM： Time Division Multiplexing，时分多路复用   
+OSI/RM: Open Systems Interconnection Reference Model，开放系统互连参考模型 
+ISO：international standards organization  国际标准化组织   
+FTP： File Transfer Protocol，文件传输协议  
+HTTP： Hyper Text Transfer Protocol，超文本传输协议 
+TCP： Transmission Control Protocol，传输控制协议 
+UDP： User Datagram Protocol，用户数据报协议  
+SMTP： Simple Mail Transfer Protocol，简单邮件传输协
+SNMP： Simple Network Management Protocol，简单网络管理协议
+ICMP： Internet Control Message Protocol，Internet控制消息协议  
+IGP：Interior Gateway Protocol，内部网关协议 
+IP：Internet Protocol，网络互联协议 
+PPP： Point-to-Point Protocol，点到点协议  
+SAP： Service Access Point，服务访问点
+CRC :Cyclic Redundancy Check，循环冗余校验码
+FTTx: Fiber To The x 光纤到x
+FTTB：Fiber To The Building 光纤到大楼
+FTTH：Fiber To The Home 光纤到户
+FTTD：Fiber To The Desk 光纤到桌面
+CSMA/CD：Carrier Sense Multiple Access with Collision Detection，载波监听多点接入/碰撞检测
+
